Navbar con rutas corregidas

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,14 +15,10 @@
         </div>
         <ul class="nav-items">
             <li><a href="">Inicio</a></li>
-            <li><a href="">Usuarios</a></li>
             <li><a href="">Juegos</a></li>
             <li><a href="">Comida</a></li>
-            <li><a href="">Mesas</a></li>
             <li><a href="">Reservas</a></li>
-            <li><a href="">Pedidos</a></li>
-            <li><a href="">Empleados</a></li>
-            <li><a href="">Cerrar Sesion</a></li>
+            <li><a href="">Registrarse</a></li>
         </ul>
     </nav>
     <div class="container">
