--- a/static/css/userforms.css
+++ b/static/css/userforms.css
@@ -87,8 +87,15 @@ body {
     padding: 30px;
 }
 
+.center-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Ocupa toda la altura de la ventana */
+    width: 100%; /* Ocupa todo el ancho (esto ya debería estar cubierto por el reset CSS) */
+}
 .form-container {
-    width: 70%;
+    width: 60%;
     height: auto;
     display: flex;
     justify-content: center;
