--- a/templates/verify_security_question.html
+++ b/templates/verify_security_question.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" href="..\static\css\userforms.css">
 </head>
 <body>
-    <div class="form-container">
-        <form method="POST">
-            <h3>Verificar Pregunta de Seguridad</h3>
-            <div class="input-container">
-                <label for="respuesta">{{ pregunta }}</label>
-                <input type="text" id="respuesta" name="respuesta" required>
+    <div class="center-wrapper">
+            <div class="form-container">
+                 <form method="POST">
+                <h3>Verificar Pregunta de Seguridad</h3>
+                <div class="input-container">
+                    <label for="respuesta">{{ pregunta }}</label>
+                    <input type="text" id="respuesta" name="respuesta" required>
+                 </div>
+                 <div class="input-container">
+                    <button type="submit">Verificar</button>
+                </div>
+                </form>
             </div>
-            <div class="input-container">
-                <button type="submit">Verificar</button>
-            </div>
-        </form>
     </div>
 </body>
 </html>
