--- a/templates/reset_security_question.html
+++ b/templates/reset_security_question.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="..\static\css\userforms.css">
 </head>
 <body>
+<div class="center-wrapper">
     <div class="form-container">
         <form method="POST">
             <h3>Verificar Pregunta de Seguridad</h3>
@@ -18,5 +19,6 @@
             </div>
         </form>
     </div>
+</div>
 </body>
 </html>
