--- a/templates/inicio_usuario.html
+++ b/templates/inicio_usuario.html
@@ -25,7 +25,7 @@
             <li class="logo"><img src="/static/images/logo_md.png" alt="" style="height: 50px;"></li>
             <li><a href="#menu">Menú</a></li>
             <li><a href="#order">Ubicación</a></li>
-            <li><a href="index.html"><button class="btn-logout">Cerrar Sesión</button></a></li>
+            <li><a href="/"><button class="btn-logout">Cerrar Sesión</button></a></li>
         </ul>
     </nav>
 <div id="mobile">
