--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
 <div id="mobile">
-    <div class="logo1"><span>Monster Dojo</span></div>
+    <div class="logo1"><img src="/static/images/logo_md.png" alt="Monster Dojo Logo" style="height: 50px;"></div>
     <ul>
         <li><a href="#home">Inicio</a></li>
         <li><a href="#menu">Productos</a></li>
