--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -3,13 +3,13 @@ body {
 }
 
 .popup {
-    display: block; /* Cambia a 'none' para ocultar el pop-up inicialmente */
+    display: none; /* Ocultar el pop-up inicialmente */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /*background-color: rgba(196, 186, 186, 0.5);*/
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
 }
 
@@ -51,26 +51,26 @@ form {
     align-items: stretch;
 }
 
-label {
-    margin: 10px 0 5px;
-    text-align: left;
-    color: #faf7e6;
+.form-group {
+    margin-bottom: 15px;
 }
 
-input[type="text"], input[type="email"], input[type="date"] {
+label {
+    margin-bottom: 5px;
+    text-align: left;
+    color: #faf7e6;
+    display: block;
+}
+
+input[type="text"], input[type="email"], input[type="date"], input[type="password"] {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
     color: #faf7e6;
-    background-color: #333;
-}
-
-input[type="date"] {
-    font-family: 'Arial', sans-serif;
-    font-size: 14px;
-    color: #faf7e6;
+    background-color: #faf7e6;
+    width: 100%;
 }
 
 .buttons {
