--- a/templates/userspanel.html
+++ b/templates/userspanel.html
@@ -40,9 +40,9 @@
         <table>
             <thead>
                 <tr>
-                    <th>Nombre</th>
-                    <th>Correo Electrónico</th>
-                    <th>Teléfono</th>
+                    <th>Nombre <button class="filter-btn"><i class="fa-solid fa-sort"></i></button></th>
+                    <th>Correo Electrónico <button class="filter-btn"><i class="fa-solid fa-sort"></i></button></th>
+                    <th>Teléfono <button class="filter-btn"><i class="fa-solid fa-sort"></i></button></th>
                     <th>Acciones</th>
                 </tr>
             </thead>
