--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -13,7 +13,7 @@
         </div>
         <ul class="nav-items">
             <li><a href="">Inicio</a></li>
-            <li><a href="">Usuarios</a></li>
+            <li><a href="userspanel">Usuarios</a></li>
             <li><a href="">Juegos</a></li>
             <li><a href="">Comida</a></li>
             <li><a href="">Mesas</a></li>
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="options-panel">
             <div class="option">
-                <a href="/adminpanel/users">
+                <a href="userspanel">
                     <i class="fa-solid fa-user"></i>
                 </a>
                 <span>Usuarios</span>
