--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -68,7 +68,7 @@ input[type="text"], input[type="email"], input[type="date"], input[type="passwor
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
-    color: #faf7e6;
+    color: black;
     background-color: #faf7e6;
     width: 100%;
 }
