--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -74,7 +74,7 @@
                 <span>Perfil</span>
             </div>
             <div class="option">
-                <a href="/adminpanel/logout">
+                <a href="/logout">
                     <i class="fa-solid fa-sign-out"></i>
                 </a>
                 <span>Cerrar Sesión</span>
